@startuml
title BucketAdapter Class Diagram

interface BucketAdapter {
    + upload(localSrc, remoteSrc)
    + download(localSrc, remoteSrc)
    + delete(remoteSrc, recursive)
    + list(remoteSrc): string[]
}

class BucketAdapterFactory {
    + getAdapter(provider: CloudProvider): BucketAdapter
}

class BucketService {
    - adapter: BucketAdapter
    + BucketService(adapter: BucketAdapter)
    + upload(...)
    + download(...)
    + delete(...)
    + list(...)
}

class BucketController {
    - bucketService: BucketService
    + BucketController(bucketService: BucketService)
    + upload(...)
    + download(...)
    + delete(...)
    + list(...)
}

class AzureAdapterImpl
class AwsAdapterImpl
class GcpAdapterImpl

BucketAdapter <|.. AzureAdapterImpl
BucketAdapter <|.. AwsAdapterImpl
BucketAdapter <|.. GcpAdapterImpl

BucketAdapterFactory --> BucketAdapter : <<creates>>
BucketService --> BucketAdapter : <<depends on>>
BucketController --> BucketService : <<depends on>>
@enduml
